--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -115,6 +115,7 @@ input:where([type="search"]) {
   padding-top: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid var(--color-border);
+  height: 11vh;
 }
 
 .remix-app__header-content {
@@ -143,12 +144,15 @@ input:where([type="search"]) {
 
 .remix-app__main {
   flex: 1 1 100%;
+  height: 50vh;
 }
 
 .remix-app__footer {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-top: 1px solid var(--color-border);
+  /* padding-top: 1rem; */
+  /* padding-bottom: 1rem; */
+  /* border-top: 1px solid var(--color-border); */
+  height: 39vh;
+
 }
 
 .remix-app__footer-content {
